--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ body nav li {
   font-size: 1.35em;
 }
 body nav h1 {
-  text-shadow: 0px 0px 3px #bd700c;
+  text-shadow: 0px 0px 3px #bd0c0c;
   width: 90%;
   margin: auto;
   font-size: 2.5em;
@@ -69,7 +69,7 @@ body form input[type=text] {
   color: white;
   padding: 3px;
   font-size: 1.11em;
-  border: 1px dashed #bd700c;
+  border: 1px dashed #af410e;
   background-color: black;
   margin-bottom: 5px;
 }
@@ -77,7 +77,7 @@ body form textarea {
   color: white;
   padding: 3px;
   font-size: 1.11em;
-  border: 1px dashed #bd700c;
+  border: 1px dashed #da1731;
   background-color: black;
   margin-bottom: 5px;
 }
@@ -85,16 +85,16 @@ body form input[type=submit] {
   color: white;
   padding: 3px;
   font-size: 1.11em;
-  border: 1px dashed #bd700c;
+  border: 1px dashed #249456;
   background-color: black;
   margin-bottom: 5px;
 }
 body footer {
-  color: white;
+  color: rgb(217, 248, 143);
   text-align: center;
   margin: 80px auto 20px;
   padding: 5px;
-  border: 1px dashed #bd700c;
+  border: 1px dashed #12bd0c;
 }
 body div.blogs.content {
   width: 90%;
@@ -108,18 +108,18 @@ body div.blog.entry {
   margin: auto;
 }
 body div.blog.entry h2 {
-  color: #bd700c;
+  color: #0cbd41;
   font-size: 1.65em;
   font-family: "Big Shoulders Stencil Display", cursive;
-  border-bottom: 1px dashed #bd700c;
+  border-bottom: 1px dashed #8d8c57;
 }
 body div.blog.entry p {
-  color: white;
+  color: rgba(255, 255, 255, 0.514);
   margin-bottom: 20px;
   font-size: 1.2em;
 }
 body div.blog.entry a {
-  color: #bd700c;
+  color: #c54534;
   text-decoration: none;
 }
 
