--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
     <source src="/video/animated_bgCar.mp4" type="video/mp4">
   </video>
     <div class="site-title">
-      <h1>Blog ~ Miquel Valero</h1>
+      <h1>Blog ~ cisco Valero</h1>
       <ul>
         <li><a href="/">Blog</a></li>
         <li><a href="/crear-entrada">Crear Entrada</a></li>
